--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
-    "mongoose": "^5.2.15"
+    "mongoose": "^5.2.15",
+    "node-sass-middleware": "^0.11.0"
   }
 }
