--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vidjot",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "repository": "https://github.com/ahmedmusawir/vidjot.git",
   "license": "MIT",
   "dependencies": {
